--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     <description>demo</description>
     <properties>
         <java.version>11</java.version>
+        <properties>
+ <maven.compiler.source>1.8</maven.compiler.source>
+ <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
     </properties>
     <dependencies>
         <dependency>
